sumo/tests/marouter/errors/incomplete_connections/from_missing1of2_allowed/errors.marouter
Error: District '1' has no source.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
